--- a/templates/veterinaria/clienteAdd.html
+++ b/templates/veterinaria/clienteAdd.html
@@ -45,10 +45,11 @@
             <h1>Clientes</h1>
 
             <form method="post">
+              {% csrf_token %}
               <div class="container">
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="rutSpan">Rut</span>
-                  
+                  {{ form.rut }}
                 </div>
                 
                 <div class="input-group mb-3">
@@ -90,72 +91,7 @@
               </div>
 
             </form>
-          
-            <table class="table table-striped table-hover">
-              <thead>
-                <tr>
-                  <th scope="col"><h4>Rut</h4></th>
-                  <th scope="col"><h4>Nombre</h4></th>
-                  <th scope="col"><h4>Apellidos</h4></th>
-                  <th scope="col"><h4>Telefonos</h4></th>
-                  <th scope="col"><h4>Email</h4></th>
-                  <th scope="col"></th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for i in '0123456789'|make_list %}
-                  {% for datos in clientes %}
-                  <tr class="align-middle">
-                    <th scope="row">{{datos.rut}}</th>
-                    <td class="text-capitalize">{{datos.nombres}}</td>
-                    <td class="text-capitalize">{{datos.apellidos}}</td>
-                    <td>
-                      +56 {{datos.fono_1}}{% if datos.fono_2 %}<br />+56
-                      {{datos.fono_2}} {% endif %}
-                    </td>
-                    <td>{{datos.email}}</td>
-                    <td>
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
-                          ⋮
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                          <li><a class="dropdown-item" type="button">Editar Datos Cliente</a></li>
-                          <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#mascotas{{datos.rut}}">Ver Mascotas</a></li>
-                          <li><a class="dropdown-item" type="button">Deshabilitar Cliente</a></li>
-                        </ul>
-                      </div>
-                    </td>
-                  </tr>
-                  <div class="modal fade" id="mascotas{{datos.rut}}" tabindex="-1" aria-labelledby="ModalLabel{{datos.rut}}" aria-hidden="true">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h1 class="modal-title fs-5" id="ModalLabel{{datos.rut}}">Mascotas Cliente {{datos.rut}}</h1>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        {% for mascota in mascotas %}
-                        {% if mascota.dueno.rut == datos.rut %}
-                        <div class="modal-body">
-                          <div class="card" style="width: 18rem;">
-                            <img src="{% static 'images/'|add:mascota.nombre|add:'.jpg' %}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title text-capitalize">{{mascota.nombre}}</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">{{mascota.edad_meses}} meses - {% if mascota.sexo %}Masculino{% else %}Femenino{% endif %}</h6>
-                              <p class="card-text text-capitalize">{{mascota.num_chip}} - {{mascota.raza.nombre_raza}} - {{mascota.raza.especie}}</p>
-                              <a href="#" class="btn btn-primary">Detalles mascota</a>
-                            </div>
-                          </div>
-                        </div>
-                        {% endif %}
-                        {% endfor %}
-                      </div>
-                    </div>
-                  </div>                  
-                  {% endfor %}
-                {% endfor %}
-              </tbody>
-            </table>
+        
           </div>
         </div>
       </div>
