--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -44,54 +44,80 @@
           <div class="container m-0 p-0">
             <h1>Clientes</h1>
 
-            <form method="post">
-              {% csrf_token %}
-              <div class="container">
-                <div class="input-group mb-3">
-                  <span class="input-group-text" id="rutSpan">Rut</span>
-                  {{ form.rut }}
-                  
-                </div>
-                
-                <div class="input-group mb-3">
-                  <span class="input-group-text" id="nombreSpan">Nombres</span>
-                  <input type="text" class="form-control" placeholder="Juan Ignacio" aria-label="nombres" aria-describedby="nombreSpan">
-                  <span class="input-group-text" id="apellidosSpan">Apellidos</span>
-                  <input type="text" class="form-control" placeholder="Gonzales Rojas" aria-label="apellidos" aria-describedby="apellidosSpan">
-                </div>
-  
-                <div class="input-group mb-3">
-                  
-                </div>
-                
-                <div class="mb-3">
-                  <label for="basic-url" class="form-label">Your vanity URL</label>
-                  <div class="input-group">
-                    <span class="input-group-text" id="basic-addon3">https://example.com/users/</span>
-                    <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#form_agregar_cliente">
+              Nuevo cliente
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="form_agregar_cliente" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_clienteLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="form_agregar_clienteLabel">Registro cliente</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
-                  <div class="form-text" id="basic-addon4">Example help text goes outside the input group.</div>
-                </div>
-                
-                <div class="input-group mb-3">
-                  <span class="input-group-text">$</span>
-                  <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-                  <span class="input-group-text">.00</span>
-                </div>
-                
-                <div class="input-group mb-3">
-                  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
-                  <span class="input-group-text">@</span>
-                  <input type="text" class="form-control" placeholder="Server" aria-label="Server">
-                </div>
-                
-                <div class="input-group">
-                  <span class="input-group-text">With textarea</span>
-                  <textarea class="form-control" aria-label="With textarea"></textarea>
+                  <div class="modal-body">
+                    <form method="POST">
+                      {% csrf_token %}
+                      <div class="input-group mb-3">
+                        <span class="input-group-text">{{ form.rut.label_tag }}</span>
+                        {{ form.rut }}
+                        {{ form.rut.errors }}
+
+                      </div>
+
+                      <div class="mb-3">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text">{{ form.nombres.label_tag }}</span>
+                          {{ form.nombres }}
+                          {{ form.nombres.errors }}
+
+                        </div>
+                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                      </div>
+
+                      <div class="mb-3">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text">{{ form.apellidos.label_tag }}</span>
+                          {{ form.apellidos }}
+                          {{ form.apellidos.errors }}
+
+                        </div>
+                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                      </div>
+
+                      <div class="mb-3">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text">{{ form.fono_1.label_tag }}</span>
+                          {{ form.fono_1 }}
+                          {{ form.fono_1.errors }}
+                          <span class="input-group-text">{{ form.fono_2.label_tag }}</span>
+                          {{ form.fono_2 }}
+                          {{ form.fono_2.errors }}
+                        </div>
+                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                      </div>
+
+                      <div class="mb-3">
+                        <div class="input-group mb-3">
+                          <span class="input-group-text">{{ form.email.label_tag }}</span>
+                          {{ form.email }}
+                          {{ form.email.errors }}
+                        </div>
+                        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                      </div>
+
+                      
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-primary">Registrar cliente</button>
+                  </div>
+                </form>
                 </div>
               </div>
-
-            </form>
+            </div>
           
             <table class="table table-striped table-hover">
               <thead>
@@ -105,7 +131,6 @@
                 </tr>
               </thead>
               <tbody>
-                {% for i in '0123456789'|make_list %}
                   {% for datos in clientes %}
                   <tr class="align-middle">
                     <th scope="row">{{datos.rut}}</th>
@@ -155,7 +180,6 @@
                     </div>
                   </div>                  
                   {% endfor %}
-                {% endfor %}
               </tbody>
             </table>
           </div>
