--- a/templates/veterinaria/atenciones.html
+++ b/templates/veterinaria/atenciones.html
@@ -7,6 +7,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <title>Catálogo atenciones</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+    <script>
+    $(document).ready( function () {
+      $('#atencionesTable').DataTable();
+  } );</script>
   </head>
   <body data-bs-theme="dark">
     <div class="container-fluid m-0 p-0">
@@ -41,9 +49,9 @@
         </div>
         <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
           <div class="container m-0 p-0">
-            <h1>Atenciones</h1>
+            <h1 class="mt-3">Atenciones</h1>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#form_agregar_atencion">
+            <button type="button" class="btn btn-primary mb-5 mt-3 justify-content-end align-self-end" data-bs-toggle="modal" data-bs-target="#form_agregar_atencion">
               Agregar una atención
             </button>
 
@@ -123,7 +131,7 @@
               </div>
             </div>
 
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover" id="atencionesTable">
               <thead>
                 <tr>
                   <th scope="col"><h4>Codigo</h4></th>
@@ -159,23 +167,46 @@
                     </td>
                   </tr>
                   <div class="modal fade" id="atencion{{atencion.id_atencion}}" tabindex="-1" aria-labelledby="ModalLabel{{atencion.id_atencion}}" aria-hidden="true">
-                    <div class="modal-dialog">
+                    <div class="modal-dialog modal-xl">
                       <div class="modal-content">
                         <div class="modal-header">
                           <h1 class="modal-title fs-5" id="ModalLabel{{atencion.id_atencion}}">Atención {{atencion.id_atencion}}</h1>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <div class="card" style="width: 18rem;">
-                            <img src="" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title text-capitalize">{{atencion.diagnostico}}</h5>
-                              <h6 class="card-subtitle mb-2 text-body-secondary">{{atencion.id_veterinario.nombres}} {{atencion.id_veterinario.apellidos}}</h6>
-                              <p class="card-text text-capitalize">{{atencion.tratamiento}}</p>
-                              <p class="card-text text-capitalize">{{atencion.observaciones}}</p>
-                              <a href="#" class="btn btn-primary">Detalles mascota</a>
+            
+                          <form>
+                            <div class="row">
+                              <div class="mb-3 col-6">
+                                Fecha: {{ atencion.fecha_atencion }}
+                              </div>
+                            <div class="mb-3 col-3">
+                              Hora Ingreso: {{ atencion.hora_ingreso }}
+                            </div>
+                            <div class="mb-3 col-3">
+                              Hora Termino: {{ atencion.hora_termino }}
                             </div>
                           </div>
+                            <div class="mb-3">                              
+                              Agendada por: <span class="text-capitalize">{{ atencion.agendada_por_asistente.nombres }} {{ atencion.agendada_por_asistente.apellidos }}</span>
+                            </div>
+                            <div class="mb-3">            
+                              Veterinario: <span class="text-capitalize">{{ atencion.id_veterinario.nombres }} {{ atencion.id_veterinario.apellidos }}</span>
+                            </div>
+                            <div class="mb-3">
+                              Diagnostico: {{ atencion.diagnostico }}                    
+                            </div>
+                            <div class="mb-3">                              
+                              Tratamiento: {{ atencion.tratamiento }}                                                        
+                            </div>
+                            <div class="mb-3">                              
+                              Observaciones: {{ atencion.observaciones }}                              
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ver Detalles Mascota</button>
+                        </div>
+                      </form>
                         </div>
                       </div>
                     </div>
