--- a/templates/veterinaria/cliente.html
+++ b/templates/veterinaria/cliente.html
@@ -83,8 +83,8 @@
                       </div>
                   </div>
                   <div class="mb-3 text-center">
-                    <button type="button" class="btn btn-danger">Eliminar atención</button>
-                    <button type="submit" class="btn btn-warning">Editar atención</button>
+                    <button type="button" class="btn btn-danger" onclick="window.location.href = '{% url 'clienteDel' cliente.id_cliente %}';">Eliminar cliente</button>
+                    <button type="submit" class="btn btn-warning">Editar cliente</button>
                   </div>          
                 </form>
             </div>
