--- a/templates/veterinaria/clienteDel.html
+++ b/templates/veterinaria/clienteDel.html
@@ -37,7 +37,10 @@
                     <a class="nav-link" href="{% url 'inicio' %}">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'clientes' %}"
+                    <a
+                      class="nav-link active"
+                      href="{% url 'clientes' %}"
+                      aria-current="page"
                       >Clientes</a
                     >
                   </li>
@@ -45,10 +48,7 @@
                     <a class="nav-link" href="{% url 'mascotas' %}">Mascotas</a>
                   </li>
                   <li class="nav-item">
-                    <a
-                      class="nav-link"
-                      aria-current="page"
-                      href="{% url 'atenciones' %}"
+                    <a class="nav-link" href="{% url 'atenciones' %}"
                       >Atenciones</a
                     >
                   </li>
@@ -66,8 +66,9 @@
           <div class="container m-0 p-0">
             <h3>Confirmar Eliminación de Cliente</h3>
             <div class="alert alert-danger h5">
-              ¿Estás seguro que deseas deshabilitar al cliente? (Rut: {{cliente.rut }} Nombres: {{ cliente.nombres }}
-              Apellidos: {{ cliente.apellidos }})
+              ¿Estás seguro que deseas deshabilitar al cliente? (Rut:
+              {{cliente.rut }} Nombres: {{ cliente.nombres }} Apellidos: {{
+              cliente.apellidos }})
             </div>
             <form method="POST">
               {% csrf_token %}
