--- a/templates/veterinaria/clientes.html
+++ b/templates/veterinaria/clientes.html
@@ -7,6 +7,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <title>Catálogo clientes</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
+    <script>
+    $(document).ready( function () {
+      $('#clientesTable').DataTable();
+  } );</script>
   </head>
   <body data-bs-theme="dark">
     <div class="container-fluid m-0 p-0">
@@ -41,13 +49,15 @@
         </div>
         
         <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
-          <div class="container m-0 p-0">
+          <div class="container m-2 p-0">
             <h1>Clientes</h1>
-
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#form_agregar_cliente">
-              Nuevo cliente
-            </button>
+            <br>
+            <div class="mb-3">
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#form_agregar_cliente">
+                ➕ Nuevo cliente
+              </button>
+            </div>
 
             <!-- Modal -->
             <div class="modal fade" id="form_agregar_cliente" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_clienteLabel" aria-hidden="true">
@@ -119,7 +129,7 @@
               </div>
             </div>
           
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover" id="clientesTable">
               <thead>
                 <tr>
                   <th scope="col"><h4>Rut</h4></th>
@@ -158,14 +168,14 @@
                     <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h1 class="modal-title fs-5" id="ModalLabel{{cliente.rut}}">Mascotas Cliente {{cliente.rut}}</h1>
+                          <h1 class="modal-title fs-5" id="ModalLabel{{cliente.rut}}">Mascotas de {{cliente.nombres}}</h1>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         {% for mascota in mascotas %}
                         {% if mascota.id_dueno.rut == cliente.rut %}
                         <div class="modal-body">
                           <div class="card" style="width: 18rem;">
-                            <img src="" class="card-img-top" alt="...">
+                            <img src="../../{{mascota.url_imagen}}" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title text-capitalize">{{mascota.nombre}}</h5>
                               <h6 class="card-subtitle mb-2 text-body-secondary">{{mascota.edad_meses}} meses - {% if mascota.sexo %}Macho{% else %}Hembra{% endif %}</h6>
