--- a/templates/veterinaria/mascotas.html
+++ b/templates/veterinaria/mascotas.html
@@ -19,45 +19,39 @@
         <div class="col-xl-1 col-md-2 fixed-top col-12 d-inline-block m-0 p-0">
           <nav class="navbar navbar-expand-md bg-body-tertiary h-100">
             <div class="container-fluid">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div
-                class="collapse navbar-collapse vh-100 sticky-md-top"
-                id="navbarNav"
-              >
+              <div class="collapse navbar-collapse vh-100 sticky-md-top" id="navbarNav">
                 <ul class="nav nav-pills flex-column w-100">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
-                      >Active</a
-                    >
+                    <a class="nav-link" href="{% url 'inicio' %}">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="{% url 'clientes' %}">Clientes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'mascotas' %}">Mascotas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'atenciones' %}">Atenciones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'inicio' %}">Razas</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
         </div>
+
         <div class="ms-auto col-xl-11 col-md-10 col-12">
           <div class="container m-0 p-0">
             <h1>Mascotas</h1>
             <div class="d-flex justify-content-around">
               {% for mascota in mascotas %}
               <div class="card">
-                <img  width="150" height="200" class="card-img-top object-fit-cover" src="" alt="Card image cap" />
+                <img  width="150" height="200" class="card-img-top object-fit-cover" src="../../{{mascota.url_imagen}}" alt="Card image cap" />
                 <div class="card-body">
                   <div class="d-flex align-items-center justify-content-between">
                     <h5 class="card-title text-capitalize me-2">{{mascota.nombres}}</h5>
