--- a/templates/veterinaria/index.html
+++ b/templates/veterinaria/index.html
@@ -68,6 +68,15 @@
                 </div>
               </div>
 
+              <div class="card" style="width: 18rem;">
+                <img src="../../static/images/mantenedor-mascotas.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Mantenedor de mascotas</h5>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, repellat aperiam!</p>
+                  <a href="{% url 'mascotas' %}" class="btn btn-primary">Ir al mantenedor</a>
+                </div>
+              </div>
+
 
               
             </div>
